--- a/onlineDoc/inject_otsdaq_head.html
+++ b/onlineDoc/inject_otsdaq_head.html
@@ -5,6 +5,28 @@
 
 <link href="http://fonts.googleapis.com/css?family=Comfortaa:700,400&amp;subset=latin,greek" rel="stylesheet" type="text/css">
 
+
+<!-- Note: usually this page is in frame and ots icon is shown by C++ -->
+        <!-- start ots icon handling -->
+		<link rel="apple-touch-icon" sizes="57x57" href="/otsdaq_icons/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/otsdaq_icons/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/otsdaq_icons/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/otsdaq_icons/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/otsdaq_icons/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/otsdaq_icons/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/otsdaq_icons/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/otsdaq_icons/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/otsdaq_icons/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/otsdaq_icons/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/otsdaq_icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/otsdaq_icons/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/otsdaq_icons/favicon-16x16.png">
+        <link rel="manifest" href="/otsdaq_icons/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/otsdaq_icons/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+        <!-- end ots icon handling -->
+		
 <style type="text/css">		
 	.contents 
 	{
