Cleaning up doxygen result on otsdaq.fnal.gov

--- a/onlineDoc/inject_otsdaq.html
+++ b/onlineDoc/inject_otsdaq.html
@@ -36,6 +36,7 @@ Here are the links to the source code documentation for each respository:
 <li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq/'>otsdaq</a>
 <li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/'>otsdaq_utilities</a> 
 <li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_components/'>otsdaq_components</a>
+<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_demo/'>otsdaq_demo</a>
 </div>
 
 <br>
