Updating core table definitions

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -1850,7 +1850,7 @@
 				if (configComments[i])			
 				    configComment = configComments[i].getAttribute("value");
 				else
-				    configComment = "UNKOWN";
+				    configComment = "UNKNOWN";
 
 
 				backLinkStr = "setupSpecificConfigGroup(\\\"" + groupName + "\\\",\\\"" +
@@ -4510,7 +4510,7 @@
 				else if(versionTracking != "ON" &&
 						versionTracking != "OFF")
 				{				
-					Debug.prependMessage = "Version TRACKING UNKOWN:::";
+					Debug.prependMessage = "Version TRACKING UNKNOWN:::";
 					if(versionTrackingSystemLink) versionTrackingSystemLink.innerHTML = "Turn Version Tracking ON";
 					_versionTrackingIsOn = false;
 				}
