--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -100,7 +100,7 @@
 		button {
 			padding: 3px;
 		    color: #001626;  
-        	margin: 0 5px 0 5px;
+        	margin: 5px;
         	display: inline;
         	cursor: pointer;
 		}
@@ -301,7 +301,7 @@
 		
         .popup{
         	width:400px;
-        	height:300px;
+        	height:320px;
         	background-color: #002540;
         	z-index:9;
         	position: fixed;
