Controls Dashboard Checkpoint

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -678,6 +678,8 @@
 			}
 
 			function pvListReqHandler(req){
+				
+				console.log("pvListReqHandler: response received!");	
 				console.log(req.responseText);
 				var datalist = document.getElementById("pvDatalist");
 				datalist.innerHTML = "";
