Fixed bug adding rows with UNIQUE_GROUP_DATA

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -2648,7 +2648,8 @@
 			if(err) 
 			{
 				Debug.log("If you do not understand the error, try refreshing the tree from the '>>' menu in the top left of the page",Debug.HIGH_PRIORITY);
-				Debug.log(err,Debug.HIGH_PRIORITY);			
+				Debug.log(err,Debug.HIGH_PRIORITY);	
+				Debug.log("If you do not understand the error, try refreshing the tree from the '>>' menu in the top left of the page",Debug.HIGH_PRIORITY);								
 				
 				if(parentId)
 					return;
