Hiding save checkbox until functional

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -1399,13 +1399,13 @@
 						" &apos;" + macroName + "&apos; on " + targetString,
 			},"" /*innerHTML*/,true /*doCloseTag*/);
 			
-			str += htmlOpen("input",{
-					"id": "outputMacroToFile-row-" + r + "-col-" + c,
-					"class":"outputMacroToFile",
-					"type":"checkbox",
-					"title": "When checked, output from Macro will be saved to file.",
-			},"Save output to file" /*innerHTML*/,true /*doCloseTag*/);
-			
+//			str += htmlOpen("input",{
+//					"id": "outputMacroToFile-row-" + r + "-col-" + c,
+//					"class":"outputMacroToFile",
+//					"type":"checkbox",
+//					"title": "When checked, output from Macro will be saved to file.",
+//			},"Save output to file" /*innerHTML*/,true /*doCloseTag*/);
+//			
 			//end Run button
 			
 			str += htmlOpen("div",{
