fixed bug with targeting front ends in FE Macro Test

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -440,7 +440,7 @@
 			DesktopContent.XMLHttpRequest("Request?RequestType=runFEMacro" +					
 					//"&feSupervisorID=" + feSupervisorID +
 					"&feClassSelected=" + feClassSelected +
-					"&feUID=" + feUIDSelected +
+					"&feUIDSelected=" + feUIDSelected +
 					"&macroType=" + feMacroTypeSelected +
 					"&macroName=" + macroName + 
 					"&saveOutputs=" + saveOutputs
