Fixed bugs with user preferences and security in wiz mode, added subset config links to tree view and subset config

--- a/WebGUI/html/Desktop.html
+++ b/WebGUI/html/Desktop.html
@@ -41,7 +41,9 @@
 			Debug.log("securityType: " +  securityType);
 			Debug.log("Application URN-LID #" + urnLid);
 
-			function init() {					
+			//=====================================================================================
+			function init() 
+			{					
 				Desktop.init(securityType);				
 			}						
             
