--- a/WebGUI/html/EditUserData.html
+++ b/WebGUI/html/EditUserData.html
@@ -562,7 +562,7 @@
 			
 			if(req.responseText.indexOf("Upload Success") >= 0)
 			{
-				Debug.log("User Settings successfully uploaded!");
+				Debug.log("User Settings successfully uploaded!", Debug.INFO_PRIORITY);
 			}		   
 	
 			Debug.log("Successfully handled User Settings.");
