Successfully reading pvs through epic interface plugin

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -611,7 +611,7 @@
 
 				
 				//console.log("editBlock_.hidden : " + editBlock_.hidden);
-				DesktopContent.XMLHttpRequest("Request?RequestType=getPages", "", pagesReqHandler);//, undefined, undefined, "sequence");	
+				//COMMENTED(4.8.19)DesktopContent.XMLHttpRequest("Request?RequestType=getPages", "", pagesReqHandler);//, undefined, undefined, "sequence");	
 				pagesList_ = "Loading";
 				//get frame and set some text to loading
 
