Able to read PVs through web app

--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -138,7 +138,7 @@
 					div.appendChild(a);
 					document.getElementById("display").appendChild(div);
 				}*/
-				//console.log("newValue() reached", pvName, pvValue);
+				console.log("newValue() reached", pvName, pvValue);
 				
 				document.getElementById(pvName).innerHTML = (pvValue);// + " @ " + pvTime);
 				document.getElementById(pvName).title = pvName + ":" + pvTime;
