Updating product deps for e19 and fixed minor compile issue

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -1301,7 +1301,7 @@
 
 			DesktopContent.popUpVerification(
 					"Are you sure you want to remove the following " + _recordsAlias + 
-					" records from the configuration?<br><br>" +
+					" records from the table?<br><br>" +
 					"Here are the records (count = " + recordArr.length + 
 					") that will be deleted:<br> <b>" + recordStr + "</b>",
 					localProceedWithDelete							
