--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -270,7 +270,7 @@
 			}
 
 			var configNames = req.responseXML.getElementsByTagName("TableName");
-			var configVersionHdr = req.responseXML.getElementsByTagName("TableVersions");
+			var tableVersionHdr = req.responseXML.getElementsByTagName("TableVersions");
 
 			//Save Column Info as...
 			//	Configuration Name:
