--- a/onlineDoc/inject_otsdaq_head.html
+++ b/onlineDoc/inject_otsdaq_head.html
@@ -5,6 +5,7 @@
 
 <link href="http://fonts.googleapis.com/css?family=Comfortaa:700,400&amp;subset=latin,greek" rel="stylesheet" type="text/css">
 
+<script type="text/JavaScript" src="../otsdaq_doc_library.js"></script>	
 
 <!-- Note: usually this page is in frame and ots icon is shown by C++ -->
         <!-- start ots icon handling -->
